2009-08-26  1.5.0.alpha11
	VINE: Adding elements to incorporate VINE functionality.
	- package org.mmisw.iserver.gwt.client.rpc.vine
		RelationInfo, Mapping
	- Server: List<RelationInfo> getVineRelationInfos()
	- TODO: Define precise info required for a mapping from this server side,
	perhaps separating the attributes of a RelationInfo from the mapping; just use
	the relation URI to link the two.



2009-08-25  1.5.0.alpha10
	- Server.getEntities(RegisteredOntologyInfo): adjustments for proper way to get the
	  ontology. This operation is only being used by the Vine app, which I'm updating now.

2009-08-25  1.5.0.alpha9
	issue #148: "Need property to capture "creator/author of original source vocabulary""
	- MdHelper: 
		- changed label and tooltip for hasCreator: 
		     "Ontology creator" ->  "..person that created the ontology representation"
		- added OmvMmi.hasContentCreator with label and tooltip: 
			"Content creator" -> "..person that created the contents reflected in the ontology"

2008-08-24  1.5.0.alpha8
	Fixed issue #161 "New version forces upload of local file"
	- CreateOntologyInfo.PriorOntologyInfo: new class to hold necessary info for when a new
	  version is to be created/registered
	- Server.createOntology: when tempOntologyInfo == null, it uses createOntologyInfo.getPriorOntologyInfo()
	  to retrieve the model directly and determine the uriForEmpty, from which the temporary
	  filename is also determined.
		
		
2008-08-16  1.5.0.alpha7
	issue 162: "External ontology considered to be internal"
	- OntServiceUtil.isOntResolvableUri(String uri): uses the ont.service.url
	  config parameter to determine if a given URI is resolvable by the deployed "ont" service.
	  This returns true iff uri.startsWith(value of ont.service.url parameter).
	  (there's a similar method in "ont" module)
	  
	- Added CreateOntologyInfo.uri member to "remember" previous URI when registerig a new version.
	