@@ -1,6 +1,7 @@
 package org.mmisw.iserver.gwt.client.rpc;
 
 import java.util.List;
+import java.util.Set;
 
 import org.mmisw.iserver.gwt.client.rpc.vine.Mapping;
 
@@ -14,6 +15,9 @@ public class MappingOntologyData extends OntologyData {
 	/** the data is the list of mappings */
 	private List<Mapping> mappings;
 	
+	/** and associated namespaces */
+	private Set<String> namespaces;
+	
 	public MappingOntologyData() {
 	}
 
@@ -23,6 +27,14 @@ public class MappingOntologyData extends OntologyData {
 
 	public void setMappings(List<Mapping> mappings) {
 		this.mappings = mappings;
+	}
+
+	public void setNamespaces(Set<String> namespaces) {
+		this.namespaces = namespaces;
+	}
+
+	public Set<String> getNamespaces() {
+		return namespaces;
 	}
 
 
